Intermadiate changes